2004-08-23  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * main.c: Fixed category update.
    * Released V 0.27
    * contacts-alternate-bigscreen.xml: New file.
    * Makefile: Added method to install alternate contact layout with broken 
                down address field.
    * Makefile: V 0.27
    * db.c: Fixed "MODIFIED" tag multiplication.
    * editing.c: Removed obsolete store_special_fields(), retrieve_special_fields()
    * main.c, editing.c, db.c: Several major bugfixes in category handling.
    * main.c: Automatic update of display after edit and deleting.

2004-08-20  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released V 0.26
    * Makefile: New version.
    * editing.c: Implemented setting of name detail fields from name field.
    
2004-08-17  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Implemented filter to allow not to enter everythign in 
                 number fields.
	* editing.c, namedetail.c: Fixed name setup for new contacts.
    * editing.c: Make name field activated per default.
    * Released Version 0.25

2004-08-10  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Finished vcard import, disabled broken dialog.
    * main.c: Made tag search case insensitive, imported contacts are 
              displayed correctly now.    
    
2004-08-08  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: match_for_search() Fixed fieldname.
	* import-vcard*: New files (code taken from gpe-bluetooth).
	* main.c: Implemented import of vcard files (-i switch).
	* main.c: match_for_search() Added missing name field to look at.

2004-08-05  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Fixed unclean creation of date combos.

2004-08-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Fixed special handling of name.
    * editing.c: Layout fixed, labels aligned rigth now, corrected spacing.